<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ChooseDifficultyActivity">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:text="@string/choose_difficulty_level_text">
    </TextView>

    <Button
        android:id="@+id/easy_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#4CAF50"
        android:textSize="18sp"
        android:text="@string/easy_diff"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/med_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#FF9800"
        android:textSize="18sp"
        android:text="@string/medium_diff"
        android:layout_margin="20dp"/>

    <Button
        android:id="@+id/hard_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:backgroundTint="#F44336"
        android:text="@string/hard_diff"
        android:layout_margin="20dp"/>

</LinearLayout>