<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:id="@+id/full_name_activity"
    tools:context=".GetNameActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:layout_gravity="center"
        android:id="@+id/animationView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:lottie_autoPlay="false"
        app:lottie_loop="true"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        app:startIconDrawable="@drawable/phone_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/showUserPhoneET"
            android:layout_width="match_parent"
            android:enabled="false"
            android:layout_height="50dp"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/user_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        app:startIconDrawable="@drawable/person_icon"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/get_name_continue_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#3F51B5"
        android:text="@string/continue_btn"
        android:layout_margin="20dp"/>

</LinearLayout>